fix help text alignment on trip form as well as set form

--- a/global_finprint/static/sass/project.scss
+++ b/global_finprint/static/sass/project.scss
@@ -252,12 +252,14 @@ a.manual-assign {
     @include glyphicon("\e079");
 }
 
+form.trip, form.set {
+  small.help-block {
+    margin-left: 15px;
+  }
+}
+
 form.set {
   #div_id_tags {
     min-width: 300px;
-  }
-
-  small.help-block {
-    margin-left: 15px;
   }
 }
